--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         <form action="">
             <input type="text" name="nome" />
             <input type="text" name="sobrenome" />
-            <input type="text" name="idade" />
+            <input type="number" name="idade" />
+            <input type="date" name="nascimento"/>
             <input type="submit" />
             <input type="reset" />
         </form>
@@ -26,9 +27,16 @@
     <script>
         const form = document.querySelector("form");
         form.addEventListener("submit", aoEnviar);
+
+
         function aoEnviar(evento) {
             evento.preventDefault(); 
             console.log("Hello, form!");
+            const nome = form.nome.value;
+            const sobrenome = form.sobrenome.value;
+            const idade = form.idade.valueAsNumber;
+            const nomeCompleto = `${nome} ${sobrenome}, ${idade} anos`;
+            console.log(nomeCompleto);
         }
     </script>
 </body>
