--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Semana 9: Forms</title>
+    <style>
+        p>span {
+            color: darkgreen;
+        }
+    </style>
 </head>
 
 <body>
@@ -21,12 +26,13 @@
             <input type="submit" />
             <input type="reset" />
         </form>
-
+        <p></p>
     </main>
 
     <script>
         const form = document.querySelector("form");
         form.addEventListener("submit", aoEnviar);
+        const pNome = document.querySelector("p");
 
 
         function aoEnviar(evento) {
@@ -37,6 +43,8 @@
             const idade = form.idade.valueAsNumber;
             const nomeCompleto = `${nome} ${sobrenome}, ${idade} anos`;
             console.log(nomeCompleto);
+            pNome.innerHTML = `Olá <span>${nomeCompleto} </span>!`;
+            
         }
     </script>
 </body>
