--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
             const nomeCompleto = `${nome} ${sobrenome}, ${idade} anos`;
             console.log(nomeCompleto);
             pNome.innerHTML = `Olá <span>${nomeCompleto} </span>!`;
-            
+            form.reset();
+            form.nome.focus();
         }
     </script>
 </body>
