cria novos elementos na lista

--- a/index.html
+++ b/index.html
@@ -27,12 +27,15 @@
             <input type="reset" />
         </form>
         <p></p>
+        <h2>Visitas passadas:</h2>
+        <ol></ol>
     </main>
 
     <script>
         const form = document.querySelector("form");
         form.addEventListener("submit", aoEnviar);
         const pNome = document.querySelector("p");
+        const ol = document.querySelector("ol");
 
 
         function aoEnviar(evento) {
@@ -46,6 +49,31 @@
             pNome.innerHTML = `Olá <span>${nomeCompleto} </span>!`;
             form.reset();
             form.nome.focus();
+            adicionaPessoa(nome, sobrenome, idade);
+        }
+            function adicionaPessoa(nome, sobrenome, idade){
+                const li = document.createElement('li');
+                const divPessoa = document.createElement('div');
+                divPessoa.classList.add("pessoa");
+
+                const spanNome = document.createElement('div');
+                spanNome.classList.add('nome');
+                spanNome.textContent = nome;
+                divPessoa.appendChild(spanNome);
+
+                const spanSobrenome = document.createElement('div');
+                spanNome.classList.add('sobrenome');
+                spanNome.textContent = sobrenome;
+                divPessoa.appendChild(spanSobrenome);
+
+                const spanIdade = document.createElement('div');
+                spanNome.classList.add('idade');
+                spanNome.textContent = idade;
+                divPessoa.appendChild(spanIdade);
+
+
+                li.appendChild(divPessoa);
+                ol.appendChild(li);
         }
     </script>
 </body>
