--- a/index.html
+++ b/index.html
@@ -7,8 +7,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Semana 9: Forms</title>
     <style>
-        p>span {
+
+        .pessoa > .idade {
+            color: darkred;
+        }
+        .pessoa > div{
             color: darkgreen;
+            display: inline;
+        }
+        div.sobrenome {
+            color: darkblue;
+        }
+        .pessoa > .sobrenome::before {
+            content: ' ';
+        }
+        .idade::before {
+            color: black;
+            content: ', ';
         }
     </style>
 </head>
@@ -62,13 +77,13 @@
                 divPessoa.appendChild(spanNome);
 
                 const spanSobrenome = document.createElement('div');
-                spanNome.classList.add('sobrenome');
-                spanNome.textContent = sobrenome;
+                spanSobrenome.classList.add('sobrenome');
+                spanSobrenome.textContent = sobrenome;
                 divPessoa.appendChild(spanSobrenome);
 
                 const spanIdade = document.createElement('div');
-                spanNome.classList.add('idade');
-                spanNome.textContent = idade;
+                spanIdade.classList.add('idade');
+                spanIdade.textContent = idade;
                 divPessoa.appendChild(spanIdade);
 
 
